# realtime-voting-backend

./: .gitignore  FIXES_SUMMARY.md  README.md  fix_missing_package.py  install_and_start.py  main.py  pyproject.toml  requirements.txt  reset_database.py  setup.sh  start_server.py  start_smart.py  test_imports.py
app/: __init__.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  chat.py  memos.py  polls.py  users.py
app/core/: __init__.py  config.py  security.py
app/database/: __init__.py  base.py  session.py
app/models/: __init__.py  memo.py  message.py  poll.py  user.py  vote.py
app/schemas/: __init__.py  chat.py  memo.py  poll.py  user.py
app/services/: __init__.py  chat_service.py  memo_service.py  poll_service.py  user_service.py
app/utils/: __init__.py  constants.py
app/websocket/: __init__.py  events.py  manager.py
