[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realtime-voting-backend"
version = "1.0.0"
description = "WebSocket 기반 실시간 투표 및 채팅 플랫폼 백엔드"
authors = [
    {name = "컴퓨터 네트워크 9팀"}
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "aiosqlite==0.20.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.16",
    "python-socketio==5.12.0",
    "websockets==13.1",
    "pydantic==2.10.3",
    "email-validator==2.2.0",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0",
    "orjson==3.10.12",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "isort==5.13.2",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
